  - The ``tailDir`` proc has been added to the ``os`` module.
  - Define ``nimPinToCpu`` to make the ``threadpool`` use explicit thread
    affinities. This can speed up or slow down the thread pool; it's up to you
    to benchmark it.
  - ``strutils.formatFloat`` and ``formatBiggestFloat`` do not depend on the C
    locale anymore and now take an optional ``decimalSep = '.'`` parameter.


  Compiler Additions
  ------------------

  - The compiler now supports a new configuration system based on
    `NimScript <docs/nims.html>`_.
  - The compiler finally considers symbol binding rules in templates and
    generics for overloaded ``[]``, ``[]=``, ``{}``, ``{}=`` operators
    (issue `#2599 <https://github.com/nim-lang/Nim/issues/2599>`_).


  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.
  - Added ``macros.getImpl`` that can be used to access the implementation of
    a routine or a constant. This allows for example for user-defined inlining
    of function calls.
  - Tuple unpacking finally works in a non-var/let context: ``(x, y) == f()``
    is allowed. Note that this doesn't declare ``x`` and ``y`` variables, for
    this ``let (x, y) == f()`` still needs to be used.
  - ``when nimvm`` can now be used for compiletime versions of some code
    sections. Click `here <docs/manual.html#when-nimvm-statement>`_ for details.
  - Usage of the type ``NimNode`` in a proc now implicitly annotates the proc
    with ``.compileTime``. This means generics work much better for ``NimNode``.


  Bugfixes
  --------
  - Fixed "Compiler internal error on iterator it(T: typedesc[Base]) called with it(Child), where Child = object of Base"
    (`#2662 <https://github.com/Araq/Nim/issues/2662>`_)